--- a/fronted/package.json
+++ b/fronted/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@srexi/purecounterjs": "^1.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^3.4.1",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.4",
     "typed.js": "^2.1.0"
@@ -36,5 +38,5 @@
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   },
-  "proxy":"http://localhost:8000"
+  "proxy": "http://localhost:8000"
 }
